Files/07-sample-app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: hello-app-service
  labels:
    app: hello-app
spec:
  selector:
    app: hello-app
  ports:
    - name: web
      port: 8080
      protocol: TCP
